# LibreOffice-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: package_skill.py  sync_bundles.py
skills/libreoffice-calc/: SKILL.md
skills/libreoffice-impress/: SKILL.md
skills/libreoffice-writer/: SKILL.md
src/: exceptions.py  patch_base.py  uno_bridge.py
src/calc/: __init__.py  cells.py  charts.py  core.py  exceptions.py  find_replace.py  formatting.py  named_ranges.py  patch.py  ranges.py  recalc.py  session.py  sheets.py  snapshot.py  targets.py
src/impress/: __init__.py  _util.py  charts.py  core.py  find_replace.py  formatting.py  master.py  media.py  patch.py  session.py  slides.py  snapshot.py  tables.py
src/writer/: __init__.py  core.py  exceptions.py  images.py  patch.py  session.py  snapshot.py  targets.py  text.py
tests/: __init__.py  conftest.py  test_colors.py  test_constants.py  test_exceptions.py  test_session_lifecycle.py  test_uno_bridge.py
tests/calc/: _helpers.py  test_calc_cells.py  test_calc_charts.py  test_calc_core.py  test_calc_find_replace.py  test_calc_formatting.py  test_calc_formulas.py  test_calc_imports.py  test_calc_named_ranges.py  test_calc_patch_apply.py  test_calc_patch_dsl.py  test_calc_ranges.py  test_calc_session.py  test_calc_session_content.py  test_calc_sheets.py  test_calc_snapshot.py  test_calc_targets.py  test_calc_validation.py  test_calc_workflows.py
tests/impress/: _helpers.py  test_impress_charts.py  test_impress_content.py  test_impress_core.py  test_impress_find_replace.py  (+15 more)
(+109 files in other folders)
